--- a/react/movies/prod/index.html
+++ b/react/movies/prod/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 		<meta name="theme-color" content="#000000">
 		<link rel="manifest" href="manifest.json">
-		<link rel="shortcut icon" href="static/img/favicon.ico">
+		<link rel="shortcut icon" href="/static/img/favicon.ico">
 		<link href="/static/css/main.8d619ece.css" rel="stylesheet">
 	</head>
 	<body>
