--- a/react/movies/prod/index.html
+++ b/react/movies/prod/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#000000">
 		<link rel="manifest" href="manifest.json">
 		<link rel="shortcut icon" href="/static/img/favicon.ico">
-		<link href="/static/css/main.8d619ece.css" rel="stylesheet">
+		<link href="static/css/main.8d619ece1.css" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
