--- a/react/json-parser/prod/index.html
+++ b/react/json-parser/prod/index.html
@@ -9,13 +9,13 @@
 		<meta name="description" content=""><meta name="theme-color" content="">
 		<meta name="apple-mobile-web-app-status-bar-style" content="">
 
-		<link href="/favicon.png" rel="shortcut icon" type="image/png">
-		<link href="/main.88816ddce4a0399c3b9a.css" rel="stylesheet">
-		<link href="/pagination.css" rel="stylesheet">
+		<link href="favicon.png" rel="shortcut icon" type="image/png">
+		<link href="main.88816ddce4a0399c3b9a.css" rel="stylesheet">
+		<link href="pagination.css" rel="stylesheet">
 	</head>
 
 	<body>
 		<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-		<script type="text/javascript" src="/main.88816ddce4a0399c3b9a.bundle.js"></script>
+		<script type="text/javascript" src="main.88816ddce4a0399c3b9a.bundle.js"></script>
 	</body>
 </html>
