--- a/react/json-parser/prod/index.html
+++ b/react/json-parser/prod/index.html
@@ -6,7 +6,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="theme-color" content="#000000">
-		<meta name="description" content=""><meta name="theme-color" content="">
+		<meta name="description" content="">
+		<meta name="theme-color" content="">
 		<meta name="apple-mobile-web-app-status-bar-style" content="">
 
 		<link href="favicon.png" rel="shortcut icon" type="image/png">
