--- a/react/minesweeper/prod/index.html
+++ b/react/minesweeper/prod/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Minesweeper</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="favicon.ico" type="image/ico">
+		<link rel="shortcut icon" href="/static/img/favicon.ico">
 		<link rel="manifest" href="manifest.json">
 		<link href="static/css/main.d42d8d7a.chunk.css" rel="stylesheet">
 	</head>
