--- a/react/json-parser/prod/index.html
+++ b/react/json-parser/prod/index.html
@@ -10,7 +10,7 @@
 		<meta name="theme-color" content="">
 		<meta name="apple-mobile-web-app-status-bar-style" content="">
 
-		<link href="favicon.png" rel="shortcut icon" type="image/png">
+		<link href="/favicon.png" rel="shortcut icon" type="image/png">
 		<link href="main.22b2b23a179c6d6905d9.css" rel="stylesheet">
 		<link href="pagination.css" rel="stylesheet">
 	</head>
