--- a/react/todo-list/prod/index.html
+++ b/react/todo-list/prod/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Todo list</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="/static/img/favicon.ico">
+		<link rel="shortcut icon" href="static/img/favicon.ico">
 		<link rel="manifest" href="manifest.json">
 		<link href="static/css/main.b4eb2817.chunk.css" rel="stylesheet">
 	</head>
