--- a/react/barley-break/prod/index.html
+++ b/react/barley-break/prod/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Barley-break</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="shortcut icon" href="/static/img/favicon.ico">
 		<link rel="manifest" href="manifest.json">
 		<link href="static/css/main.cadf8c05.chunk.css" rel="stylesheet">
 	</head>
