--- a/react/task-list/prod/index.html
+++ b/react/task-list/prod/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Task list</title>
 		<meta charset="utf-8">
-		<link rel="shortcut icon" href="static/img/favicon.ico">
+		<link rel="shortcut icon" href="https://qa-zero.github.io/some-projects/react/task-list/prod/static/img/favicon.ico">
 		<link rel="manifest" href="https://qa-zero.github.io/some-projects/react/task-list/prod/manifest.json">
 		<link href="static/css/main.52f0905a.chunk.css" rel="stylesheet">
 	</head>
